fix top nav overlap on playlists by date
On the playlists by date page, the top navigation was getting put under
the playlist by date divs. This change sets a higher z-index to avoid
that.

--- a/wuvt/static/css/wuvt.css
+++ b/wuvt/static/css/wuvt.css
@@ -271,6 +271,11 @@ header #bubble ul li.active a {
 /* }}} */
 
 /* Navigation: common elements {{{ */
+nav {
+    position: relative;
+    z-index: 20;
+}
+
 nav ul {
     margin: 0;
     padding: 0;
